# linuxdoc_i18n

./: .gitignore  README.md  README.rst  prj  pyproject.toml  requirements.txt
source/: conf.py  index.rst  test_typedef.h
source/locales/: index.pot
source/locales/fr/LC_MESSAGES/: index.po
