# SPDX-License-Identifier: AGPL-3.0-or-later
[project]

dynamic = ["version"]  # see [tool.setuptools.dynamic]

name = "linuxdoc_i18n"
description = "My python sandbox"
readme = "README.rst"
requires-python = ">=3.9"
# license = {file = "LICENSE"}
keywords = ["sandbox", "development"]
authors = [
  {name = "Markus Heiser", email = "markus.heiser@darmarit.de" }
]
maintainers = [
  {name = "Markus Heiser", email = "markus.heiser@darmarit.de" }
]

classifiers = [
  # For a list of valid classifiers, see https://pypi.org/classifiers/
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python",
]

dependencies = [
  "Sphinx",
  "sphinx-intl",
  "linuxdoc@git+https://github.com/return42/linuxdoc#egg=master",
  # "-e ../linuxdoc",
  "sphinx-rtd-theme",
]

[project.optional-dependencies]
# pip install -e .[dev,test]
dev = [
  "build"
]
test = [
  "pylint",
]

[project.urls]
"Homepage" = "https://github.com/return42/linuxdoc_i18n"
"Bug Reports" = "https://github.com/return42/linuxdoc_i18n/issues"
"Source" = "https://github.com/return42/linuxdoc_i18n/"

[project.scripts]
demo = "demo:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src/"]

[tool.setuptools.package-data]
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html
# linuxdoc_i18n = ["*.dat", "*/*.dat", "*/*/*.dat"]

[tool.setuptools.dynamic]
version = {attr = "demo.VERSION"}

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

